First_Step/data/44/147/execution.txt

Comment :=>>-The compilation or preparation of execution has failed
<|--
Scores.java:42: error: not a statement
        scores[] = scoresOrdonnee(scores[]);
              ^
Scores.java:42: error: ';' expected
        scores[] = scoresOrdonnee(scores[]);
                ^
Scores.java:42: error: '.class' expected
        scores[] = scoresOrdonnee(scores[]);
                                          ^
3 errors
Not compiled
--|>
Grade :=>>0.00000
